next leg of testchamber, some skating and impulse var tweaks
Former-commit-id: 8f568cc09023a595c52ca83e1f1a53c08415ee81

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -378,8 +378,10 @@ newgui game [
 					vardef regenguard		"regen guard"
 					vardef regenhealth		"regen health"
 					vardef regenextra		"regen extra"
-					vardef impulselength	"impulse length"
+					vardef impulsemeter		"impulse meter"
 					vardef impulsecost		"impulse cost"
+					vardef impulsecount		"impulse count"
+					vardef impulseskate		"impulse skate"
 					vardef itemsallowed		"items allowed"
 					vardef itemdropping		"item dropping"
 					vardef kamikaze			"kamikaze"
@@ -405,8 +407,10 @@ newgui game [
 					varfld regenguard 16
 					varfld regenhealth 16
 					varfld regenextra 16
-					varfld impulselength 16
+					varfld impulsemeter 16
 					varfld impulsecost 16
+					varfld impulsecount 16
+					varfld impulseskate 16
 					varfld itemsallowed 16
 					varfld itemdropping 16
 					varfld kamikaze 16
