secondary fire sounds
Former-commit-id: e557fc89d011a290d78a0faf18e2051e1ddd4842

--- a/data/sounds/package.cfg
+++ b/data/sounds/package.cfg
@@ -18,12 +18,19 @@ registersound	"sounds/sfx/bzzt"				112	"air"	200		//	S_BZZT
 registersound	"sounds/sfx/reload"				128	"air"	200		//	S_RELOAD
 registersound	"sounds/sfx/switch"				128	"air"	200		//	S_SWITCH
 registersound	"sounds/sfx/pistol"				156	"air"	400		//	S_PISTOL
+registersound	"sounds/sfx/pistol"				156	"air"	400		//	S_PISTOL2
 registersound	"sounds/sfx/shotgun"			224 "air"	600		//	S_SHOTGUN
+registersound	"sounds/sfx/shotgun2"			254 "air"	600		//	S_SHOTGUN2
 registersound	"sounds/sfx/smg"				128	"air"	600		//	S_SMG
+registersound	"sounds/sfx/smg2"				128	"air"	600		//	S_SMG2
 registersound	"sounds/sfx/grenade"			192	"air"	200		//	S_GRENADE
+registersound	"sounds/sfx/grenade"			192	"air"	200		//	S_GRENADE2
 registersound	"sounds/sfx/flamer"				96	"air"	500		//	S_FLAMER
+registersound	"sounds/sfx/flamer"				96	"air"	500		//	S_FLAMER2
 registersound	"sounds/sfx/plasma"				112	"air"	400		//	S_PLASMA
+registersound	"sounds/sfx/plasma2"			224	"air"	400		//	S_PLASMA2
 registersound	"sounds/sfx/rifle"				192	"air"	700		//	S_RIFLE
+registersound	"sounds/sfx/rifle2"				254	"air"	700		//	S_RIFLE2
 registersound	"sounds/sfx/itempickup"			128	"air" 	100		//	S_ITEMPICKUP
 registersound	"sounds/sfx/itemspawn"			192	"air"	200		//	S_ITEMSPAWN
 registersound	"sounds/sfx/regenerate"			254	"air"	100		//	S_REGEN
