rudimentary vote menu system
Former-commit-id: dd94e773970a75b1f0ed61bd60f2a58edd7220a5

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -194,7 +194,7 @@ newgui name [
 				nameval = (getname)
 				guifield nameval 20 [name $nameval]
 				guistrut 1
-				guibutton (format "%1ok" $green) [cleargui 1] "action"
+				guibutton "^fgok" [cleargui 1] "action"
 			]
 		]
 	]
@@ -224,6 +224,28 @@ newgui arena [
 		]
 	]
 ]
+
+displayvotes = [
+	numvotes = (getvote 0)
+	if (> $numvotes 0) [
+		loop i $numvotes [
+			vote = [(getvote (+ $i 1))]
+			voteplayer = (getclientname (at $vote 0))
+			votemode = (at $vote 1)
+			votemuts = (at $vote 2)
+			votemap = (at $vote 3)
+			votegame = (at $vote 1)
+			guilist [
+				guifont "super" [
+					guibutton "^fgvote" [(format "start %1 %2 %3" $votemap $votemode $votemuts)] conopen
+					guistrut 1
+				]
+				guibutton (format "%1 ^fasuggests ^fy%2 ^faon ^fy%3" $voteplayer (gamename $modeselected $mutsselected) $map) [(format "start %1 %2 %3" $votemap $votemode $votemuts)]
+			]
+		]
+	] [ guitext "No votes are currently pending" ]
+]
+newgui votes [ displayvotes ]
 
 maplists = [ storymaps storymaps mainmaps mainmaps stfmaps stfmaps ctfmaps mctfmaps racemaps racemaps ]
 maplistsize = 22 //adjust if desired
@@ -275,97 +297,95 @@ newgui game [
 		showngamegui = 1
 	]
 	if (strcmp (at $maplist $mapnum) "?") [ mapcur = $mapextra; mapimg = $mapextra ] [ mapcur = (at $maplist $mapnum); mapimg = (at $mappath $mapnum) ]
-	guistayopen [
+	guilist [
 		guilist [
+			guifont "default" [ guitext (gamename $modeselected $mutsselected) ]
+			guilist [ guitext "^faselected on "; guifont "default" [ guitext $mapcur ] ]
+			guistrut 1
 			guilist [
-				guifont "default" [ guitext (gamename $modeselected $mutsselected) ]
-				guilist [ guitext (format "%1selected on " $gray); guifont "default" [ guitext $mapcur ] ]
-				guistrut 1
 				guilist [
-					guilist [
-						guititle "gamemode"
-						guiradio "lobby"						modeselected 1
-						guiradio "editing"						modeselected 2
-						guiradio "story"						modeselected 3
-						guiradio "deathmatch"					modeselected 4
-						guiradio "secure-the-flag"				modeselected 5
-						guiradio "capture-the-flag"				modeselected 6
-						guiradio "race"							modeselected 7S
-						if (>= $modeselected 3) [
-							guistrut 1
-							guititle "mutators"
-							guibitfield "instagib"					mutsselected 0x0004
+					guititle "gamemode"
+					guiradio "lobby"						modeselected 1
+					guiradio "editing"						modeselected 2
+					guiradio "story"						modeselected 3
+					guiradio "deathmatch"					modeselected 4
+					guiradio "secure-the-flag"				modeselected 5
+					guiradio "capture-the-flag"				modeselected 6
+					guiradio "race"							modeselected 7S
+					if (>= $modeselected 3) [
+						guistrut 1
+						guititle "mutators"
+						guibitfield "instagib"					mutsselected 0x0004
+					] [ guistrut 2 ]
+					if (>= $modeselected 4) [
+						guibitfield "multi-sided"				mutsselected 0x0001
+						guibitfield "teamplay"					mutsselected 0x0002
+						guibitfield "arena"						mutsselected 0x0020
+						if (= $modeselected 4) [
+							guibitfield "duel"						mutsselected 0x0008
+							guibitfield "survivor"					mutsselected 0x0010
 						] [ guistrut 2 ]
-						if (>= $modeselected 4) [
-							guibitfield "multi-sided"				mutsselected 0x0001
-							guibitfield "teamplay"					mutsselected 0x0002
-							guibitfield "arena"						mutsselected 0x0020
-							if (= $modeselected 4) [
-								guibitfield "duel"						mutsselected 0x0008
-								guibitfield "survivor"					mutsselected 0x0010
-							] [ guistrut 2 ]
-						] [ guistrut 5 ]
-						mutsselected = (mutscheck $modeselected $mutsselected)
-					]
-					guistrut 2
-					guilist [ guiimage $mapimg [@(format "start %1 on %2" (gamename $modeselected $mutsselected) $mapcur)] 8 1 "textures/nothumb" ]
+					] [ guistrut 5 ]
+					mutsselected = (mutscheck $modeselected $mutsselected)
+				]
+				guistrut 2
+				guilist [ guiimage $mapimg [@(format "start %1 on %2" (gamename $modeselected $mutsselected) $mapcur)] 8 1 "textures/nothumb" ]
+			]
+			guistrut 1
+			guilist [
+				guilist [
+					vardef botscale			"scale num bots"
+					vardef botminskill		"bot min skill level"
+					vardef botmaxskill		"bot max skill level"
 				]
 				guistrut 1
 				guilist [
-					guilist [
-						vardef botscale			"scale num bots"
-						vardef botminskill		"bot min skill level"
-						vardef botmaxskill		"bot max skill level"
-					]
-					guistrut 1
-					guilist [
-						varfld botscale 12
-						varfld botminskill 12
-						varfld botmaxskill 12
-					]
-					guistrut 2
-					guilist [
-						guibutton (format "%1add bot" $cyan) [addbot] "team"
-						guibutton (format "%1del bot" $magenta) [delbot] "player"
-					]
+					varfld botscale 12
+					varfld botminskill 12
+					varfld botmaxskill 12
+				]
+				guistrut 2
+				guilist [
+					guibutton "^fcadd bot" [addbot] "team"
+					guibutton "^fmdel bot" [delbot] "player"
 				]
 			]
-			guistrut 2
+		]
+		guistrut 2
+		guilist [
+			guilist [ 
+				guistrut 7
+				guiimage "textures/conopen" [@(format "start %1 %2 %3" $mapcur $modeselected $mutsselected)] 1
+				guistrut 1
+				guifont "super" [
+					guibutton "^fgvote" (format "start %1 %2 %3" $mapcur $modeselected $mutsselected)
+				]
+			] 
 			guilist [
-				guilist [ 
-					guistrut 7
-					guiimage "textures/conopen" [@(format "start %1 %2 %3" $mapcur $modeselected $mutsselected)] 1
-					guistrut 1
-					guifont "super" [
-						guibutton (format "%1vote" $green) (format "start %1 %2 %3" $mapcur $modeselected $mutsselected)
-					]
-				] 
+				nummaps = (listlen $maplist)
+				mapindex = (min (max 0 (- $nummaps $maplistsize)) $mapindex) //safeguard
+				mapnum = (min $mapnum $nummaps)
 				guilist [
-					nummaps = (listlen $maplist)
-					mapindex = (min (max 0 (- $nummaps $maplistsize)) $mapindex) //safeguard
-					mapnum = (min $mapnum $nummaps)
-					guilist [
-						guilist [ guistrut 28 ]
-						loop i $nummaps [
-							if (&& (>= $i $mapindex) (< (- $i $mapindex) $maplistsize)) [
-								curmap = (at $maplist $i)
-								if (strcmp $curmap "?") [
-									guilist [
-										guiradio "" mapnum $i
-										mapextraval = $mapextra
-										guifield mapextraval 24 [mapextra = $mapextraval]
-									]
-								] [ guiradio $curmap mapnum $i ]
-							]
+					guilist [ guistrut 28 ]
+					loop i $nummaps [
+						if (&& (>= $i $mapindex) (< (- $i $mapindex) $maplistsize)) [
+							curmap = (at $maplist $i)
+							if (strcmp $curmap "?") [
+								guilist [
+									guiradio "" mapnum $i
+									mapextraval = $mapextra
+									guifield mapextraval 24 [mapextra = $mapextraval]
+								]
+							] [ guiradio $curmap mapnum $i ]
 						]
 					]
-					if (< $maplistsize $nummaps) [ guislider mapindex 0 (- $nummaps $maplistsize) [] 1 ]
 				]
+				if (< $maplistsize $nummaps) [ guislider mapindex 0 (- $nummaps $maplistsize) [] 1 ]
 			]
 		]
 	]
 	guitab "vars"
-	guistayopen [ guilist [
+	guilist [
 		guilist [
 			guilist [
 				guilist [
@@ -424,11 +444,11 @@ newgui game [
 					varfld stfoccupy 16
 					guilist [
 						guilist [ varfld spawnweapon 11 ]
-						guitext (format "%1%2" $gray (at $wepnames $spawnweapon))
+						guitext (format "^fa%1" (at $wepnames $spawnweapon))
 					]
 					guilist [
 						guilist [ varfld instaspawnweapon 11 ]
-						guitext (format "%1%2" $gray (at $wepnames $instaspawnweapon))
+						guitext (format "^fa%2" (at $wepnames $instaspawnweapon))
 					]
 				]
 			]
@@ -484,17 +504,21 @@ newgui game [
 					varfld instaspawndelay 16
 				]
 			]
-			guibutton (format "%1reset all game variables" $orange) [resetvars] "exit"
+			guibutton "^foreset all game variables" [resetvars] "exit"
 			if (> $hasoctapaks 0) [
 				guilist [
-					guibutton (format "%1show maps from sauerbraten" $violet) [
+					guibutton "^fvshow maps from sauerbraten" [
 						if (> $mapocta 0) [mapocta = 0] [mapocta = 1]
 						showngamegui = 0
 					] (? (> $mapocta 0) "checkboxon" "checkbox")
 				]
 			]
 		]
-	] ]
+	]
+	if (> (getvote 0) 0) [
+		guitab "votes"
+		displayvotes
+	]
 ] [
 	if (< (gamemode) 2) [ modeselected = $defaultmode ] [ modeselected = (gamemode) ]
 	if (< (mutators) 0) [ mutsselected = $defaultmuts ] [ mutsselected = (mutscheck $modeselected (mutators)) ]
@@ -504,7 +528,6 @@ newgui game [
 	mapextra = ""
 	showngamegui = 0
 ]
-
 
 newgui servers [
 	guistayopen [
