--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -225,27 +225,25 @@ newgui arena [
 	]
 ]
 
-displayvotes = [
-	numvotes = (getvote 0)
-	if (> $numvotes 0) [
-		loop i $numvotes [
-			vote = [(getvote (+ $i 1))]
+displayvote = [
+	numvote = (getvote 0)
+	if (> $numvote 0) [
+		loop i $numvote [
+			vote = (getvote (+ $i 1))
 			voteplayer = (getclientname (at $vote 0))
 			votemode = (at $vote 1)
 			votemuts = (at $vote 2)
 			votemap = (at $vote 3)
 			votegame = (at $vote 1)
 			guilist [
-				guifont "super" [
-					guibutton "^fgvote" [(format "start %1 %2 %3" $votemap $votemode $votemuts)] conopen
-					guistrut 1
-				]
-				guibutton (format "%1 ^fasuggests ^fy%2 ^faon ^fy%3" $voteplayer (gamename $modeselected $mutsselected) $map) [(format "start %1 %2 %3" $votemap $votemode $votemuts)]
+				guibutton "" (format "start %1 %2 %3" $votemap $votemode $votemuts) conopen
+				guistrut 1
+				guibutton (format "[^fs^fgvote^fS] ^fs%1^fS suggests ^fs^fy%2^fS aon ^fs^fy%3^fS" $voteplayer (gamename $modeselected $mutsselected) $votemap) (format "start %1 %2 %3" $votemap $votemode $votemuts)
 			]
 		]
 	] [ guitext "No votes are currently pending" ]
 ]
-newgui votes [ displayvotes ]
+newgui vote [ displayvote ]
 
 maplists = [ storymaps storymaps mainmaps mainmaps stfmaps stfmaps ctfmaps mctfmaps racemaps racemaps ]
 maplistsize = 22 //adjust if desired
@@ -515,10 +513,8 @@ newgui game [
 			]
 		]
 	]
-	if (> (getvote 0) 0) [
-		guitab "votes"
-		displayvotes
-	]
+	guitab "votes"
+	displayvote
 ] [
 	if (< (gamemode) 2) [ modeselected = $defaultmode ] [ modeselected = (gamemode) ]
 	if (< (mutators) 0) [ mutsselected = $defaultmuts ] [ mutsselected = (mutscheck $modeselected (mutators)) ]
