don't show vote tab unless one is in progress
Former-commit-id: d1e1ab225a44eeeffbe88fd31076afac78733bdc

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -513,8 +513,10 @@ newgui game [
 			]
 		]
 	]
-	guitab "votes"
-	displayvote
+	if (> (getvote 0) 0) [
+		guitab "votes"
+		guilist [ guilist [ displayvote ] ]
+	]
 ] [
 	if (< (gamemode) 2) [ modeselected = $defaultmode ] [ modeselected = (gamemode) ]
 	if (< (mutators) 0) [ mutsselected = $defaultmuts ] [ mutsselected = (mutscheck $modeselected (mutators)) ]
