vote entry on main if there are votes in progress
Former-commit-id: 22dbcc7bf8c9c09992821668d0d5de0a1a1b9636

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -17,8 +17,8 @@ newgui main [
 		guilist [
 			textlogo
 			guistrut 1
-			if (= $editing 1) [
-				guibutton	"editing"			"showgui editing"
+			if (> (getvote 0) 0) [
+				guibutton	"show votes"		"showgui vote"
 				guistrut 1
 			]
 			guibutton		"quick play" 		"localconnect"
