race mode game logic and lap timing
Former-commit-id: 40d00faeaea807395d51f23f0cdcf86049f3e6a5

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -466,6 +466,7 @@ newgui game [
 					vardef wavepusharea		"wave push area"
 					vardef wavepushscale	"wave push scale"
 					vardef timelimit		"time limit"
+					vardef racelimit		"race limit"
 					vardef intermlimit		"intermission"
 					vardef votelimit		"vote limit"
 					vardef itemspawntime	"item spawn time"
@@ -476,6 +477,7 @@ newgui game [
 					vardef spawnprotecttime	"spawn protect"
 					vardef spawndelay		"spawn delay"
 					vardef instaspawndelay	"insta spawn delay"
+					vardef racespawndelay	"race spawn delay"
 				]
 				guistrut 1
 				guilist [
@@ -490,6 +492,7 @@ newgui game [
 					varfld wavepusharea 16
 					varfld wavepushscale 16
 					varfld timelimit 16
+					varfld racelimit 16
 					varfld intermlimit 16
 					varfld votelimit 16
 					varfld itemspawntime 16
@@ -500,6 +503,7 @@ newgui game [
 					varfld spawnprotecttime 16
 					varfld spawndelay 16
 					varfld instaspawndelay 16
+					varfld racespawndelay 16
 				]
 			]
 			guibutton "^foreset all game variables" [resetvars] "exit"
