fix vote keybind
Former-commit-id: ffaeff0d81a644635b3c40bdc300e8f018c4356e

--- a/data/defaults.cfg
+++ b/data/defaults.cfg
@@ -147,7 +147,7 @@ bind END			[ spectator 0 ]
 
 bind F1				[ toggleedit ]
 bind F2				[ showgui game ]
-bind F3				[ showgui votes ]
+bind F3				[ showgui vote ]
 bind F5				[ setmaster 1 ]
 bindvar F10			[ inputgrab ]
 bind F11			[ toggleconsole ]
