reset impulse meter on lap finish, show race timer on hud, reset checkpoint data when manually suiciding (pressing K or /kill)
Former-commit-id: 952066955f35fd87a7f3dd674e67d49a2caf7376

--- a/data/maps/testchamber.cfg
+++ b/data/maps/testchamber.cfg
@@ -60,7 +60,7 @@
 // mmskylight 1
 // movespeed 50.0
 // numplayers 0
-// obitdeath "died a horrible death"
+obitdeath "corroded in the gas"
 // obitwater "sucked on slime"
 // refractfog 1
 // shadowmapambient 0x000000
