finished off testchamber
Former-commit-id: 5bddc247630da2e402cc3c6a868360bdb62c73c0

--- a/data/maps/testchamber.cfg
+++ b/data/maps/testchamber.cfg
@@ -10,18 +10,18 @@
 // bumperror 3
 // causticscale 100
 // caustictex "<anim:75>textures/caustics"
-// cloudblend 0.35
-// cloudbox "penguins/kenon"
+// cloudblend 0.5
+// cloudbox "acord/clouds"
 // cloudclip 0.0
-// cloudcolour 0xFFFFFF
+// cloudcolour 0x222222
 // cloudfade 0.2
 // cloudglare 0
 // cloudheight -0.375
-// cloudlayer "acord/grass"
+// cloudlayer "acord/cloudlayer"
 // cloudlayerblend 1.0
-// cloudlayercolour 0x331122
+// cloudlayercolour 0x333333
 // cloudlayerglare 0
-// cloudscale 0.125
+// cloudscale 2.0
 // cloudscrollx 0.0
 // cloudscrolly 0.0
 // cloudsubdiv 16
@@ -60,7 +60,7 @@
 // mmskylight 1
 // movespeed 50.0
 // numplayers 0
-obitdeath "corroded in the gas"
+// obitdeath "corroded in the gas"
 // obitwater "sucked on slime"
 // refractfog 1
 // shadowmapambient 0x000000
@@ -68,8 +68,8 @@ obitdeath "corroded in the gas"
 // skybgcolour 0x000000
 // skybgglare 0
 // skyblend 1.0
-// skybox "skyboxes/stars"
-// skycolour 0xFFFFFF
+// skybox "skyboxes/gradient"
+// skycolour 0x111111
 // skyglare 1
 // skylight 0x000000
 // skytexture 1
