--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -225,7 +225,7 @@ displayvote = [
 			guilist [
 				guibutton "" (format "start %1 %2 %3" $votemap $votemode $votemuts) conopen
 				guistrut 1
-				guibutton (format "[^fs^fgvote^fS] ^fs%1^fS suggests ^fs^fy%2^fS on ^fs^fy%3^fS" $voteplayer (gamename $modeselected $mutsselected) $votemap) (format "start %1 %2 %3" $votemap $votemode $votemuts)
+				guibutton (format "^fs%1^fS suggests ^fs^fy%2^fS on ^fs^fy%3^fS" $voteplayer (gamename $votemode $votemuts) $votemap) (format "start %1 %2 %3" $votemap $votemode $votemuts)
 			]
 		]
 	] [ guitext "No votes are currently pending" ]
