--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -864,70 +864,74 @@ newgui options [
     guibutton "Restore Defaults" "exec defaults.cfg"
 
     guitab    "gfx"
-    guitext "performance key: 0fast~, 2moderate~, 3slow and pretty~"
+    guitext "performance key: ^f0fast^f~, ^f2moderate^f~, ^f3slow and pretty^f~"
     guibar
     if (&& (< $shaders 0) (= $renderpath 0)) [
-        guicheckbox "2shaders			"			shaders 1 -1
+        guicheckbox "^f2shaders			"			shaders 1 -1
 	] [
     	guilist [
-        	guicheckbox "2shaders			"           shaders
+        	guicheckbox "^f2shaders			"           shaders
         	if $shaders [
             	guibar
-            	guiradio "0low detail" shaderdetail 1
+            	guiradio "^f0low detail" shaderdetail 1
             	guibar
-            	guiradio "2high detail" shaderdetail 3
+            	guiradio "^f2high detail" shaderdetail 3
         	]
 		]
     ]
     guilist [
         guitext "water			  "
         guibar
-        guicheckbox "2refraction"  waterrefract
+        guicheckbox "^f2refraction"  waterrefract
         guibar
-        guicheckbox "3reflection"  waterreflect
+        guicheckbox "^f3reflection"  waterreflect
         guibar
-        guicheckbox "0caustics"    caustics
+        guicheckbox "^f0caustics"    caustics
         if (&& (= $renderpath 0) $waterrefract) [
             guibar
-            guicheckbox "0depth fog"   refractfog
+            guicheckbox "^f0fog"   refractfog
+        ]
+        if $usetexrect [
+            guibar
+            guicheckbox "^f0animation" vertwater
         ]
     ]
     if (> $renderpath 0) [
         guilist [
             guitext "waterfalls		  "
             guibar
-            guicheckbox "2refraction" waterfallrefract
+            guicheckbox "^f2refraction" waterfallrefract
             guibar
-            guicheckbox "0reflection" waterfallenv
+            guicheckbox "^f0reflection" waterfallenv
         ]
     ]
     if (= $renderpath 0) [
         guilist [
-            guicheckbox "3shadow maps		"  shadowmap
+            guicheckbox "^f3shadow maps		"  shadowmap
             if $shadowmap [
                 guibar
-                guiradio "2medium quality" shadowmapsize 9 [blurshadowmap 1]
+                guiradio "^f2medium quality" shadowmapsize 9 [blurshadowmap 1]
                 guibar
-                guiradio "3high quality" shadowmapsize 10 [blurshadowmap 2]
+                guiradio "^f3high quality" shadowmapsize 10 [blurshadowmap 2]
             ] [
                 guibar
-                guicheckbox "0blob shadows" blobs
+                guicheckbox "^f0blob shadows" blobs
             ]
         ]
         if (>= $maxtmus 3) [
-            guicheckbox "2dynamic lights	"    ffdynlights 5 0
+            guicheckbox "^f2dynamic lights	"    ffdynlights 5 0
         ]
     ] [
         guilist [
-            guicheckbox "3soft shadows	"  shadowmap
+            guicheckbox "^f3soft shadows	"  shadowmap
             if $shadowmap [
                 guibar
-                guiradio "2medium quality" shadowmapsize 9 [blurshadowmap 1]
+                guiradio "^f2medium quality" shadowmapsize 9 [blurshadowmap 1]
                 guibar
-                guiradio "3high quality" shadowmapsize 10 [blurshadowmap 2]
+                guiradio "^f3high quality" shadowmapsize 10 [blurshadowmap 2]
             ] [
                 guibar
-                guicheckbox "0blob shadows" blobs
+                guicheckbox "^f0blob shadows" blobs
             ]
         ]
         if $glare [
@@ -941,91 +945,101 @@ newgui options [
                 if (= $blurglare 7) [glarepreset = 4]
             ]
             guilist [
-                guicheckbox "3glare			"       glare
+                guicheckbox "^f3glare			"       glare
                 guibar
-                guiradio "2subtle" glarepreset 1 [blurglare 4; glarescale 1]
+                guiradio "^f2subtle" glarepreset 1 [blurglare 4; glarescale 1]
                 guibar
-                guiradio "2glowy" glarepreset 2 [blurglare 3; glarescale 2]
+                guiradio "^f2glowy" glarepreset 2 [blurglare 3; glarescale 2]
                 guibar
-                guiradio "3soft" glarepreset 3 [blurglare 7; glarescale 1]
+                guiradio "^f3soft" glarepreset 3 [blurglare 7; glarescale 1]
                 guibar
-                guiradio "3intense" glarepreset 4 [blurglare 7; glarescale 2]
+                guiradio "^f3intense" glarepreset 4 [blurglare 7; glarescale 2]
             ]
         ] [
-            guicheckbox "3glare"         glare
+            guicheckbox "^f3glare"         glare
         ]
     ]
     guilist [
-        guicheckbox "3grass			" grass
+        guicheckbox "^f3motion blur " motionblur
+        if $motionblur [
+            guibar
+            guiradio "^f3subtle" motionblurscale 0.5
+            guibar
+            guiradio "^f3moderate" motionblurscale 0.65
+            guibar
+            guiradio "^f3intense" motionblurscale 0.8
+        ]
+    ]
+    guilist [
+        guicheckbox "^f3grass			" grass
         if $grass [
             guibar
-            guiradio "2quick fade" grassdist 128
+            guiradio "^f2quick fade" grassdist 128
             guibar
-            guiradio "2moderate fade" grassdist 256
+            guiradio "^f2moderate fade" grassdist 256
             guibar
-            guiradio "3slow fade" grassdist 512
+            guiradio "^f3slow fade" grassdist 512
         ]
     ]
     if (> $renderpath 0) [
         guilist [
-            guicheckbox "0dynamic lights	"    maxdynlights 3 0
+            guicheckbox "^f0dynamic lights	"    maxdynlights 3 0
             if $maxdynlights [
                 guibar
-                guiradio "0medium quality" maxdynlights 3
+                guiradio "^f0medium quality" maxdynlights 3
                 guibar
-                guiradio "2high quality" maxdynlights 5
+                guiradio "^f2high quality" maxdynlights 5
             ]
         ]
         guilist [
-            guicheckbox "2soft particles	" depthfx
+            guicheckbox "^f2soft particles	" depthfx
             if $depthfx [
                 guibar
-                guiradio "0low quality" depthfxsize 7 [depthfxrect 0; depthfxfilter 1; blurdepthfx 1]
+                guiradio "^f0low quality" depthfxsize 7 [depthfxrect 0; depthfxfilter 1; blurdepthfx 1]
                 guibar
-                guiradio "2medium quality" depthfxsize 10 [depthfxrect 1; depthfxfilter 0; blurdepthfx 0]
+                guiradio "^f2medium quality" depthfxsize 10 [depthfxrect 1; depthfxfilter 0; blurdepthfx 0]
                 guibar
-                guiradio "3high quality" depthfxsize 12 [depthfxrect 1; depthfxfilter 0; blurdepthfx 0]
+                guiradio "^f3high quality" depthfxsize 12 [depthfxrect 1; depthfxfilter 0; blurdepthfx 0]
             ]
         ]
     ]
-    guicheckbox "0water/lava vertex animation" vertwater
-    guicheckbox "0glass reflection"  glassenv
+    guicheckbox "^f0glass reflection"  glassenv
     guilist [
-        guicheckbox "0decals      	" decals
+        guicheckbox "^f0decals			" decals
         if $decals [
             guibar
-            guiradio "0quick fade" decalfade 10000 [maxdecaltris 1024]
+            guiradio "^f0quick fade" decalfade 10000 [maxdecaltris 1024]
             guibar
-            guiradio "2slow fade" decalfade 60000 [maxdecaltris 4096]
+            guiradio "^f2slow fade" decalfade 60000 [maxdecaltris 4096]
         ]
     ]
-    guicheckbox "0fix t-joints (world sparklies)" filltjoints
+    guicheckbox "^f0fix t-joints (world sparklies)" filltjoints
     guilist [
-        guitext "textures		  "
+        guitext "textures			  "
         guibar
-        guiradio "0low quality" maxtexsize 256
+        guiradio "^f0low quality" maxtexsize 256
         guibar
-        guiradio "2high quality" maxtexsize 0
+        guiradio "^f2high quality" maxtexsize 0
     ]
     guilist [
         guitext "models			  "
         guibar
-        guicheckbox "0lighting"    lightmodels
+        guicheckbox "^f0lighting"    lightmodels
         guibar
-        guicheckbox "0reflection"  envmapmodels
+        guicheckbox "^f0reflection"  envmapmodels
         guibar
-        guicheckbox "0glow"        glowmodels
+        guicheckbox "^f0glow"        glowmodels
         if (> $renderpath 0) [
             guibar
-            guicheckbox "2bumpmap" bumpmodels
+            guicheckbox "^f2bumpmap" bumpmodels
         ]
     ]
     guilist [
         guitext "animation		  "
         guibar
-        guiradio "0medium quality" matskel 1
+        guiradio "^f0medium quality" matskel 1
         guibar
-        guiradio "0high quality" matskel 0
+        guiradio "^f0high quality" matskel 0
     ]
 
     guitab    "display"
