made plasma/grenade alt sticky, improved plasma alt fire by suppressing taper when sticky and exploding at end of life, tweaked ai manager team balancing to round up not down, greyscaled explosion texture
Former-commit-id: d264b4e639fe79600a51c128274558f06ef99fa9

--- a/data/maps/refuge.cfg
+++ b/data/maps/refuge.cfg
@@ -51,13 +51,13 @@
 // liquidcurb 10.0
 // liquidspeed 0.85
 // lmshadows 1
-// mapauthor "Tony Cord"
+mapauthor "Anthony Cord"
 // mapmusic ""
 maptitle "Refuge"
 // mmshadows 1
 // mmskylight 1
 // movespeed 50.0
-numplayers 6
+numplayers 8
 // refractfog 1
 // shadowmapambient 0x000000
 // shadowmapangle 0
