tweaked default bot skills and played with weapon/alt-fire balancing some more
Former-commit-id: 3d2dbb4bc1ec80cc264d26dff7d225d5f4407f57

--- a/data/sounds/package.cfg
+++ b/data/sounds/package.cfg
@@ -8,6 +8,7 @@ registersound	"sounds/sfx/tink"				96	"air"	200		//	S_TINK
 registersound	"sounds/sfx/ricochet"			48	"air"	200		//	S_RICOCHET
 registersound	"sounds/sfx/whizz"				48	"air"	200		//	S_WHIZZ
 registersound	"sounds/sfx/whirr"				96	"air"	200		//	S_WHIRR
+registersound	"sounds/sfx/beep"				192	"air"	200		//	S_BEEP
 registersound	"sounds/sfx/explode"			254	"air"	800		//	S_EXPLODE
 registersound	"sounds/sfx/energy"				64	"air"	300		//	S_ENERGY
 registersound	"sounds/sfx/hum"				100	"air"	300		//	S_HUM
@@ -33,8 +34,8 @@ registersound	"sounds/sfx/rifle"				192	"air"	700		//	S_RIFLE
 registersound	"sounds/sfx/rifle2"				254	"air"	700		//	S_RIFLE2
 registersound	"sounds/sfx/itempickup"			128	"air" 	100		//	S_ITEMPICKUP
 registersound	"sounds/sfx/itemspawn"			192	"air"	200		//	S_ITEMSPAWN
-registersound	"sounds/sfx/regenerate"			254	"air"	100		//	S_REGEN
-registersound	"sounds/sfx/damage1"			192	"air"	200		//	S_DAMAGE1
+registersound	"sounds/sfx/regenerate"			192	"air"	100		//	S_REGEN
+registersound	"sounds/sfx/damage1"			156	"air"	200		//	S_DAMAGE1
 registersound	"sounds/sfx/damage2"			192 "air"	200		//	S_DAMAGE2
 registersound	"sounds/sfx/damage3"			192	"air"	200		//	S_DAMAGE3
 registersound	"sounds/sfx/damage4"			192	"air"	200		//	S_DAMAGE4
