fixed missed config
Former-commit-id: c7f48b075d5edfb18344a97d4e6c18e56b71a2bd

--- a/data/sounds/announcer/package.cfg
+++ b/data/sounds/announcer/package.cfg
@@ -1,28 +1,28 @@
-registersound	"sounds/announcer/beta/flagsecured"			224	"air"			//	S_V_FLAGSECURED
-registersound	"sounds/announcer/beta/flagoverthrown"		224	"air"			//	S_V_FLAGOVERTHROWN
-registersound	"sounds/announcer/beta/flagtaken"			224	"air"			//	S_V_FLAGPICKUP
-registersound	"sounds/announcer/beta/flagdropped"			224	"air"			//	S_V_FLAGDROP
-registersound	"sounds/announcer/beta/flagreturned"		224	"air"			//	S_V_FLAGRETURN
-registersound	"sounds/announcer/beta/flagcaptured"		224	"air"			//	S_V_FLAGSCORE
-registersound	"sounds/announcer/beta/flagreset"			224	"air"			//	S_V_FLAGRESET
-registersound	"sounds/announcer/beta/fight"				224	"air"			//	S_V_FIGHT
-registersound	"sounds/announcer/beta/checkpoint"			224	"air"			//	S_V_CHECKPOINT
-registersound	"sounds/announcer/beta/oneminute"			224	"air"			//	S_V_ONEMINUTE
-registersound	"sounds/announcer/beta/headshot"			224	"air"			//	S_V_HEADSHOT
-registersound	"sounds/announcer/beta/carnage"				224	"air"			//	S_V_SPREE1
-registersound	"sounds/announcer/beta/slaughter"			224	"air"			//	S_V_SPREE2
-registersound	"sounds/announcer/beta/massacre"			224	"air"			//	S_V_SPREE3
-registersound	"sounds/announcer/beta/bloodbath"			224	"air"			//	S_V_SPREE4
-registersound	"sounds/sfx/multi"							224	"air"			//	S_V_SPREE5
-registersound	"sounds/sfx/multi"							224	"air"			//	S_V_SPREE6
-registersound	"sounds/sfx/multi"							224	"air"			//	S_V_MKILL1
-registersound	"sounds/sfx/multi"							224	"air"			//	S_V_MKILL2
-registersound	"sounds/sfx/multi"							224	"air"			//	S_V_MKILL3
-registersound	"sounds/sfx/revenge"						224	"air"			//	S_V_REVENGE
-registersound	"sounds/sfx/dominating"						224	"air"			//	S_V_DOMINATE
-registersound	"sounds/announcer/beta/youwin"				224	"air"			//	S_V_YOUWIN
-registersound	"sounds/announcer/beta/youlose"				224	"air"			//	S_V_YOULOSE
-registersound	"sounds/announcer/beta/missioncomplete"		224	"air"			//	S_V_MCOMPLETE
-registersound	"sounds/announcer/beta/fragged"				224	"air"			//	S_V_FRAGGED
-registersound	"sounds/announcer/beta/owned"				224	"air"			//	S_V_OWNED
-registersound	"sounds/announcer/beta/owned"				224	"air"			//	S_V_DENIED
+registersound	"sounds/announcer/flagsecured"			224	"air"			//	S_V_FLAGSECURED
+registersound	"sounds/announcer/flagoverthrown"		224	"air"			//	S_V_FLAGOVERTHROWN
+registersound	"sounds/announcer/flagtaken"			224	"air"			//	S_V_FLAGPICKUP
+registersound	"sounds/announcer/flagdropped"			224	"air"			//	S_V_FLAGDROP
+registersound	"sounds/announcer/flagreturned"			224	"air"			//	S_V_FLAGRETURN
+registersound	"sounds/announcer/flagcaptured"			224	"air"			//	S_V_FLAGSCORE
+registersound	"sounds/announcer/flagreset"			224	"air"			//	S_V_FLAGRESET
+registersound	"sounds/announcer/fight"				224	"air"			//	S_V_FIGHT
+registersound	"sounds/announcer/checkpoint"			224	"air"			//	S_V_CHECKPOINT
+registersound	"sounds/announcer/oneminute"			224	"air"			//	S_V_ONEMINUTE
+registersound	"sounds/announcer/headshot"				224	"air"			//	S_V_HEADSHOT
+registersound	"sounds/announcer/carnage"				224	"air"			//	S_V_SPREE1
+registersound	"sounds/announcer/slaughter"			224	"air"			//	S_V_SPREE2
+registersound	"sounds/announcer/massacre"				224	"air"			//	S_V_SPREE3
+registersound	"sounds/announcer/bloodbath"			224	"air"			//	S_V_SPREE4
+registersound	"sounds/sfx/multi"						224	"air"			//	S_V_SPREE5
+registersound	"sounds/sfx/multi"						224	"air"			//	S_V_SPREE6
+registersound	"sounds/sfx/multi"						224	"air"			//	S_V_MKILL1
+registersound	"sounds/sfx/multi"						224	"air"			//	S_V_MKILL2
+registersound	"sounds/sfx/multi"						224	"air"			//	S_V_MKILL3
+registersound	"sounds/sfx/revenge"					224	"air"			//	S_V_REVENGE
+registersound	"sounds/sfx/dominating"					224	"air"			//	S_V_DOMINATE
+registersound	"sounds/announcer/youwin"				224	"air"			//	S_V_YOUWIN
+registersound	"sounds/announcer/youlose"				224	"air"			//	S_V_YOULOSE
+registersound	"sounds/announcer/missioncomplete"		224	"air"			//	S_V_MCOMPLETE
+registersound	"sounds/announcer/fragged"				224	"air"			//	S_V_FRAGGED
+registersound	"sounds/announcer/owned"				224	"air"			//	S_V_OWNED
+registersound	"sounds/announcer/owned"				224	"air"			//	S_V_DENIED
