alarm/damagetone/hiteffect tweaks, separate burn damage tone
Former-commit-id: a2f6ee24da5d5f22875d8db47f578d638f737ea1

--- a/data/sounds/package.cfg
+++ b/data/sounds/package.cfg
@@ -43,6 +43,7 @@ registersound	"sounds/sfx/damage5"			224	"air"	200		//	S_DAMAGE5
 registersound	"sounds/sfx/damage6"			224	"air"	200		//	S_DAMAGE6
 registersound	"sounds/sfx/damage7"			224	"air"	200		//	S_DAMAGE7
 registersound	"sounds/sfx/damage8"			224	"air"	200		//	S_DAMAGE8
+registersound	"sounds/sfx/burndamage"			224	"air"	200		//	S_BURNDAMAGE
 registersound	"sounds/sfx/respawn"			128	"air"	200		//	S_RESPAWN
 registersound	"sounds/sfx/chat"				192	"air" 			//	S_CHAT
 registersound	"sounds/sfx/error"				254	"air"			//	S_ERROR
