updated "mission" announcements
Former-commit-id: 2e0cd2f51e8319971709193e82ebce810b1c7659

--- a/data/maps/bloodgrounds.cfg
+++ b/data/maps/bloodgrounds.cfg
@@ -92,7 +92,7 @@
 // yawsky 0
 
 "bloodground_intro" = [
-	announce (registersound "sfx/change" 255 "air" -1 -1 1) 1 "^fgMISSION: ^fycollect the ^faneutral ^fyflags and take them to the ^faneutral ^fybase in the center."
+	announce (registersound "sfx/change" 255 "air" -1 -1 1) 3 "^foMISSION: ^fwcollect the ^faneutral ^fwflags and take them to the ^faneutral ^fwbase in the center."
 ]
 "on_start" = [ if (= (gamemode) 6) [ sleep $titlefade [ bloodground_intro ] ] ]
 
