--- a/data/maps/forge.cfg
+++ b/data/maps/forge.cfg
@@ -87,7 +87,7 @@ numplayers 8
 // yawclouds 0
 // yawsky 331
 "forge_intro" = [
-	announce (registersound "sfx/change" 255 "air" -1 -1 1) 1 "^fgMISSION: ^fycollect the ^faneutral ^fyflag in the center and take it to your base on the opposite side."
+	announce (registersound "sfx/change" 255 "air" -1 -1 1) 3 "^foMISSION: ^fwcollect the ^faneutral ^fwflag in the center and take it to your base on the opposite side."
 ]
 "on_start" = [ if (= (gamemode) 6) [ sleep $titlefade [ forge_intro ] ] ]
 texture water "textures/water.jpg" 0 0 0 1.000000
