--- a/data/maps/tower.cfg
+++ b/data/maps/tower.cfg
@@ -87,7 +87,7 @@ numplayers 8
 // yawsky 0
 "on_start" = [ if (= (gamemode) 6) [ sleep $titlefade [ tower_intro ] ] ]
 "tower_intro" = [
-	announce (registersound "sfx/change" 255 "air" -1 -1 1) 1 "^fgMISSION: ^fycollect the ^faneutral ^fyflag at the bottom and take it your base at the top."
+	announce (registersound "sfx/change" 255 "air" -1 -1 1) 3 "^foMISSION: ^fwcollect the ^faneutral ^fwflag at the bottom and take it your base at the top."
 ]
 texture water "textures/water.jpg" 0 0 0 1.000000
 texture 1 "textures/waterfall.jpg"
