--- a/data/sounds/package.cfg
+++ b/data/sounds/package.cfg
@@ -13,7 +13,8 @@ registersound	"sounds/sfx/explode"			254	"air"	800		//	S_EXPLODE
 registersound	"sounds/sfx/energy"				128	"air"	100		//	S_ENERGY
 registersound	"sounds/sfx/hum"				128	"air"	100		//	S_HUM
 registersound	"sounds/sfx/burn"				128	"air"	100		//	S_BURN
-registersound	"sounds/sfx/burning"			254	"air"	300		//	S_BURNING
+registersound	"sounds/sfx/burning"			254	"air"	200		//	S_BURNING
+registersound	"sounds/sfx/burnfire"			224	"air"	300		//	S_BURNFIRE
 registersound	"sounds/sfx/bzap"				128	"air"	100		//	S_BZAP
 registersound	"sounds/sfx/bzzt"				128	"air"	100		//	S_BZZT
 registersound	"sounds/sfx/reload"				224	"air"	200		//	S_RELOAD
