gcc 4.4 fix and tovec cleanups
Former-commit-id: 05bbd299f57a09803f699c7d185369cb7d6a290d

--- a/src/Makefile
+++ b/src/Makefile
@@ -368,65 +368,65 @@ engine/worldio.o: shared/command.h shared/geom.h shared/ents.h
 engine/worldio.o: shared/iengine.h shared/igame.h engine/sound.h
 engine/worldio.o: engine/world.h engine/octa.h engine/lightmap.h engine/bih.h
 engine/worldio.o: engine/texture.h engine/model.h
-game/ai.o: game/game.h game/ai.h engine/engine.h shared/cube.h shared/tools.h
+game/ai.o: game/game.h engine/engine.h shared/cube.h shared/tools.h
 game/ai.o: shared/command.h shared/geom.h shared/ents.h shared/iengine.h
 game/ai.o: shared/igame.h engine/sound.h engine/world.h engine/octa.h
 game/ai.o: engine/lightmap.h engine/bih.h engine/texture.h engine/model.h
-game/ai.o: game/ctf.h game/stf.h game/vars.h game/scoreboard.h
-game/client.o: game/game.h game/ai.h engine/engine.h shared/cube.h shared/tools.h
+game/ai.o: game/ai.h game/ctf.h game/stf.h game/vars.h game/scoreboard.h
+game/client.o: game/game.h engine/engine.h shared/cube.h shared/tools.h
 game/client.o: shared/command.h shared/geom.h shared/ents.h shared/iengine.h
 game/client.o: shared/igame.h engine/sound.h engine/world.h engine/octa.h
 game/client.o: engine/lightmap.h engine/bih.h engine/texture.h engine/model.h
-game/client.o: game/ctf.h game/stf.h game/vars.h game/scoreboard.h
-game/ctf.o: game/game.h game/ai.h engine/engine.h shared/cube.h shared/tools.h
+game/client.o: game/ai.h game/ctf.h game/stf.h game/vars.h game/scoreboard.h
+game/ctf.o: game/game.h engine/engine.h shared/cube.h shared/tools.h
 game/ctf.o: shared/command.h shared/geom.h shared/ents.h shared/iengine.h
 game/ctf.o: shared/igame.h engine/sound.h engine/world.h engine/octa.h
 game/ctf.o: engine/lightmap.h engine/bih.h engine/texture.h engine/model.h
-game/ctf.o: game/ctf.h game/stf.h game/vars.h game/scoreboard.h
-game/entities.o: game/game.h game/ai.h engine/engine.h shared/cube.h shared/tools.h
+game/ctf.o: game/ai.h game/ctf.h game/stf.h game/vars.h game/scoreboard.h
+game/entities.o: game/game.h engine/engine.h shared/cube.h shared/tools.h
 game/entities.o: shared/command.h shared/geom.h shared/ents.h
 game/entities.o: shared/iengine.h shared/igame.h engine/sound.h
 game/entities.o: engine/world.h engine/octa.h engine/lightmap.h engine/bih.h
-game/entities.o: engine/texture.h engine/model.h game/ctf.h game/stf.h
-game/entities.o: game/vars.h game/scoreboard.h
-game/game.o: game/game.h game/ai.h engine/engine.h shared/cube.h shared/tools.h
+game/entities.o: engine/texture.h engine/model.h game/ai.h game/ctf.h
+game/entities.o: game/stf.h game/vars.h game/scoreboard.h
+game/game.o: game/game.h engine/engine.h shared/cube.h shared/tools.h
 game/game.o: shared/command.h shared/geom.h shared/ents.h shared/iengine.h
 game/game.o: shared/igame.h engine/sound.h engine/world.h engine/octa.h
 game/game.o: engine/lightmap.h engine/bih.h engine/texture.h engine/model.h
-game/game.o: game/ctf.h game/stf.h game/vars.h game/scoreboard.h
-game/hud.o: game/game.h game/ai.h engine/engine.h shared/cube.h shared/tools.h
+game/game.o: game/ai.h game/ctf.h game/stf.h game/vars.h game/scoreboard.h
+game/hud.o: game/game.h engine/engine.h shared/cube.h shared/tools.h
 game/hud.o: shared/command.h shared/geom.h shared/ents.h shared/iengine.h
 game/hud.o: shared/igame.h engine/sound.h engine/world.h engine/octa.h
 game/hud.o: engine/lightmap.h engine/bih.h engine/texture.h engine/model.h
-game/hud.o: game/ctf.h game/stf.h game/vars.h game/scoreboard.h
-game/physics.o: game/game.h game/ai.h engine/engine.h shared/cube.h shared/tools.h
+game/hud.o: game/ai.h game/ctf.h game/stf.h game/vars.h game/scoreboard.h
+game/physics.o: game/game.h engine/engine.h shared/cube.h shared/tools.h
 game/physics.o: shared/command.h shared/geom.h shared/ents.h shared/iengine.h
 game/physics.o: shared/igame.h engine/sound.h engine/world.h engine/octa.h
 game/physics.o: engine/lightmap.h engine/bih.h engine/texture.h
-game/physics.o: engine/model.h game/ctf.h game/stf.h game/vars.h
+game/physics.o: engine/model.h game/ai.h game/ctf.h game/stf.h game/vars.h
 game/physics.o: game/scoreboard.h
-game/projs.o: game/game.h game/ai.h engine/engine.h shared/cube.h shared/tools.h
+game/projs.o: game/game.h engine/engine.h shared/cube.h shared/tools.h
 game/projs.o: shared/command.h shared/geom.h shared/ents.h shared/iengine.h
 game/projs.o: shared/igame.h engine/sound.h engine/world.h engine/octa.h
 game/projs.o: engine/lightmap.h engine/bih.h engine/texture.h engine/model.h
-game/projs.o: game/ctf.h game/stf.h game/vars.h game/scoreboard.h
-game/server.o: game/game.h game/ai.h engine/engine.h shared/cube.h shared/tools.h
+game/projs.o: game/ai.h game/ctf.h game/stf.h game/vars.h game/scoreboard.h
+game/server.o: game/game.h engine/engine.h shared/cube.h shared/tools.h
 game/server.o: shared/command.h shared/geom.h shared/ents.h shared/iengine.h
 game/server.o: shared/igame.h engine/sound.h engine/world.h engine/octa.h
 game/server.o: engine/lightmap.h engine/bih.h engine/texture.h engine/model.h
-game/server.o: game/ctf.h game/stf.h game/vars.h game/scoreboard.h
+game/server.o: game/ai.h game/ctf.h game/stf.h game/vars.h game/scoreboard.h
 game/server.o: game/stfmode.h game/ctfmode.h game/duelmut.h game/aiman.h
 game/server.o: game/auth.h game/extinfo.h
-game/stf.o: game/game.h game/ai.h engine/engine.h shared/cube.h shared/tools.h
+game/stf.o: game/game.h engine/engine.h shared/cube.h shared/tools.h
 game/stf.o: shared/command.h shared/geom.h shared/ents.h shared/iengine.h
 game/stf.o: shared/igame.h engine/sound.h engine/world.h engine/octa.h
 game/stf.o: engine/lightmap.h engine/bih.h engine/texture.h engine/model.h
-game/stf.o: game/ctf.h game/stf.h game/vars.h game/scoreboard.h
-game/weapons.o: game/game.h game/ai.h engine/engine.h shared/cube.h shared/tools.h
+game/stf.o: game/ai.h game/ctf.h game/stf.h game/vars.h game/scoreboard.h
+game/weapons.o: game/game.h engine/engine.h shared/cube.h shared/tools.h
 game/weapons.o: shared/command.h shared/geom.h shared/ents.h shared/iengine.h
 game/weapons.o: shared/igame.h engine/sound.h engine/world.h engine/octa.h
 game/weapons.o: engine/lightmap.h engine/bih.h engine/texture.h
-game/weapons.o: engine/model.h game/ctf.h game/stf.h game/vars.h
+game/weapons.o: engine/model.h game/ai.h game/ctf.h game/stf.h game/vars.h
 game/weapons.o: game/scoreboard.h
 
 shared/crypto-standalone.o: shared/cube.h shared/tools.h shared/command.h
@@ -453,14 +453,15 @@ engine/server-standalone.o: shared/command.h shared/geom.h shared/ents.h
 engine/server-standalone.o: shared/iengine.h shared/igame.h engine/sound.h
 engine/server-standalone.o: engine/world.h engine/octa.h engine/lightmap.h
 engine/server-standalone.o: engine/bih.h engine/texture.h engine/model.h
-game/server-standalone.o: game/game.h game/ai.h engine/engine.h shared/cube.h
+game/server-standalone.o: game/game.h engine/engine.h shared/cube.h
 game/server-standalone.o: shared/tools.h shared/command.h shared/geom.h
 game/server-standalone.o: shared/ents.h shared/iengine.h shared/igame.h
 game/server-standalone.o: engine/sound.h engine/world.h engine/octa.h
 game/server-standalone.o: engine/lightmap.h engine/bih.h engine/texture.h
-game/server-standalone.o: engine/model.h game/ctf.h game/stf.h game/vars.h
-game/server-standalone.o: game/stfmode.h game/ctfmode.h game/duelmut.h
-game/server-standalone.o: game/aiman.h game/auth.h game/extinfo.h
+game/server-standalone.o: engine/model.h game/ai.h game/ctf.h game/stf.h
+game/server-standalone.o: game/vars.h game/stfmode.h game/ctfmode.h
+game/server-standalone.o: game/duelmut.h game/aiman.h game/auth.h
+game/server-standalone.o: game/extinfo.h
 
 shared/cube.h.gch: shared/tools.h shared/command.h shared/geom.h
 shared/cube.h.gch: shared/ents.h shared/iengine.h shared/igame.h
@@ -473,5 +474,5 @@ game/game.h.gch: engine/engine.h shared/cube.h shared/tools.h
 game/game.h.gch: shared/command.h shared/geom.h shared/ents.h
 game/game.h.gch: shared/iengine.h shared/igame.h engine/sound.h
 game/game.h.gch: engine/world.h engine/octa.h engine/lightmap.h engine/bih.h
-game/game.h.gch: engine/texture.h engine/model.h game/ctf.h game/stf.h
-game/game.h.gch: game/ai.h game/vars.h game/scoreboard.h
+game/game.h.gch: engine/texture.h engine/model.h game/ai.h game/ctf.h
+game/game.h.gch: game/stf.h game/vars.h game/scoreboard.h
