--- a/src/bloodfrontier.cbp
+++ b/src/bloodfrontier.cbp
@@ -432,6 +432,11 @@
 			<Option target="client-dbg" />
 			<Option target="client-prof" />
 		</Unit>
+		<Unit filename="engine\mpr.h">
+			<Option target="client" />
+			<Option target="client-dbg" />
+			<Option target="client-prof" />
+		</Unit>
 		<Unit filename="engine\normal.cpp">
 			<Option target="client" />
 			<Option target="client-dbg" />
