--- a/data/sounds/package.cfg
+++ b/data/sounds/package.cfg
@@ -15,6 +15,7 @@ registersound	"sounds/sfx/hum"				128	"air"	100		//	S_HUM
 registersound	"sounds/sfx/burn"				96	"air"	100		//	S_BURN
 registersound	"sounds/sfx/burning"			192	"air"	100		//	S_BURNING
 registersound	"sounds/sfx/burnfire"			192	"air"	200		//	S_BURNFIRE
+registersound	"sounds/sfx/extinguish"			224	"air"	200		//	S_EXTINGUISH
 registersound	"sounds/sfx/bzap"				128	"air"	100		//	S_BZAP
 registersound	"sounds/sfx/bzzt"				128	"air"	100		//	S_BZZT
 registersound	"sounds/sfx/reload"				224	"air"	200		//	S_RELOAD
