disconnect option in main menu
Former-commit-id: 1b82aaaadfbcbf774d1019e4738beff616e8a23d

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -17,6 +17,10 @@ newgui main [
 		guilist [
 			textlogo
 			guistrut 1
+			if (> (ready) 0) [
+				guibutton	"disconnect"		"disconnect"
+				guistrut 1
+			]
 			if (> (getvote 0) 0) [
 				guibutton	"show votes"		"showgui vote"
 				guistrut 1
